약물 복용 알림 기능 개선: pubspec.yaml에 flutter_local_notifications 의존성을 추가하고, reminder_provider.dart에서 알림 설정 및 취소 기능을 구현함. medication_screen.dart에서 알림 테스트 버튼과 예약된 알림 확인 기능을 추가하여 사용자 경험을 향상시킴. notification_service.dart에서 알림 예약 및 취소 로직을 개선하고, 주간 반복 알림 설정 기능을 추가함.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   
   # 시간대 처리
   timezone: ^0.9.4
+  
+  # 로컬 알림
+  flutter_local_notifications: ^17.0.0
 
 dev_dependencies:
   flutter_test:
